displayed choosen filters

--- a/frontend/src/app/components/recipes/recipes.component.html
+++ b/frontend/src/app/components/recipes/recipes.component.html
@@ -63,7 +63,7 @@
     <div
       class="app-recipes__container--selected-filters col-6 col-md-4 col-lg-4"
     >
-      tu będą wypisane wybrane filtry
+      {{ choosenFilters }}
     </div>
     <div
       class="app-recipes__container--number-of-recipes col-12 col-md-4 col-lg-4"
