added saving user filters in session storage

--- a/frontend/src/app/components/recipes/recipes.component.html
+++ b/frontend/src/app/components/recipes/recipes.component.html
@@ -66,7 +66,13 @@
     <div
       class="app-recipes__container--selected-filters col-6 col-md-4 col-lg-4"
     >
-      {{ choosenFilters }}
+      {{ filtersToDisplay }}
+      <span
+        *ngIf="filters"
+        class="app-recipes__container--remove-filters"
+        (click)="removeFilters()"
+        >x</span
+      >
     </div>
     <div
       class="app-recipes__container--number-of-recipes col-12 col-md-4 col-lg-4"
