--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -6,8 +6,7 @@
   <ul class="app-navbar__desktop">
     <li>
       <a
-        [routerLink]="['/recipes']"
-        [queryParams]="{ page: 1 }"
+        routerLink="/recipes"
         routerLinkActive="app-navbar__desktop--active"
         class="app-navbar__desktop--link"
         >Przepisy</a
@@ -77,8 +76,7 @@
       <a
         (click)="sidenav.toggle(); mobileMenuIsOpen = !mobileMenuIsOpen"
         class="app-navbar__desktop--mobile-link"
-        [routerLink]="['/recipes']"
-        [queryParams]="{ page: 1 }"
+        routerLink="/recipes"
         >Przepisy</a
       >
       <a
