--- a/frontend/src/app/components/recipes/recipe-card/recipe-card.component.scss
+++ b/frontend/src/app/components/recipes/recipe-card/recipe-card.component.scss
@@ -7,6 +7,7 @@ mat-card {
   }
   mat-card-title {
     color: $font-color;
+    line-height: 1;
   }
   mat-card-subtitle {
     color: $font-color;
