added some comments

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -12,6 +12,7 @@
         class="cards-section__card--description col-lg-5 col-md-12 col-sm-12"
       >
         <h2 class="description__header">Załóż bezpłatne konto</h2>
+        <!-- TODO: change description -->
         <p class="description__subheader">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
@@ -32,6 +33,7 @@
       />
     </mat-card>
     <mat-card class="cards-section__card row">
+      <!-- TODO: change image -->
       <img
         class="cards-section__card--image col-lg-6 col-md-12 col-sm-12"
         src="/assets/accounts.png"
@@ -40,6 +42,7 @@
         class="cards-section__card--description col-lg-5 col-md-12 col-sm-12"
       >
         <h2 class="description__header">Załóż bezpłatne konto</h2>
+        <!-- TODO: change description -->
         <p class="description__subheader">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
@@ -60,6 +63,7 @@
         class="cards-section__card--description col-lg-5 col-md-12 col-sm-12"
       >
         <h2 class="description__header">Załóż bezpłatne konto</h2>
+        <!-- TODO: change description -->
         <p class="description__subheader">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
@@ -74,12 +78,14 @@
           auctor eu.
         </p>
       </div>
+      <!-- TODO: change image -->
       <img
         class="cards-section__card--image col-lg-6 col-md-12 col-sm-12"
         src="/assets/accounts.png"
       />
     </mat-card>
     <mat-card class="cards-section__card row">
+      <!-- TODO: change image -->
       <img
         class="cards-section__card--image col-lg-6 col-md-12 col-sm-12"
         src="/assets/accounts.png"
@@ -88,6 +94,7 @@
         class="cards-section__card--description col-lg-5 col-md-12 col-sm-12"
       >
         <h2 class="description__header">Załóż bezpłatne konto</h2>
+        <!-- TODO: change description -->
         <p class="description__subheader">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
