added home page context

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -12,19 +12,15 @@
         class="cards-section__card--description col-lg-5 col-md-12 col-sm-12"
       >
         <h2 class="description__header">Załóż bezpłatne konto</h2>
-        <!-- TODO: change description -->
         <p class="description__subheader">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
-          aenean sed adipiscing diam donec. At ultrices mi tempus imperdiet. Sed
-          ullamcorper morbi tincidunt ornare massa eget egestas. Tincidunt
-          praesent semper feugiat nibh. Eu feugiat pretium nibh ipsum consequat
-          nisl. Ornare aenean euismod elementum nisi quis eleifend quam
-          adipiscing vitae. Tempus imperdiet nulla malesuada pellentesque elit
-          eget. Dictum at tempor commodo ullamcorper a lacus. Duis tristique
-          sollicitudin nibh sit amet. Id nibh tortor id aliquet. At tempor
-          commodo ullamcorper a. In nisl nisi scelerisque eu ultrices vitae
-          auctor eu.
+          Założenie bezpłatnego konta daje dostęp do wielu funkcjonalności:
+          <br />
+          - Możliwość dodawania posiadanych produktów <br />
+          - Filtrowanie przepisów na podstawie produktów <br />
+          - W pełni funkcjonalny harmonogram <br />
+          - Obliczanie BMI oraz zapotrzebowania na podstawie parametrów ciała
+          <br />
+          - Dodawanie własnych przepisów <br />
         </p>
       </div>
       <img
@@ -33,28 +29,20 @@
       />
     </mat-card>
     <mat-card class="cards-section__card row">
-      <!-- TODO: change image -->
       <img
         class="cards-section__card--image col-lg-6 col-md-12 col-sm-12"
-        src="/assets/accounts.png"
+        src="/assets/schedule.png"
       />
       <div
         class="cards-section__card--description col-lg-5 col-md-12 col-sm-12"
       >
-        <h2 class="description__header">Załóż bezpłatne konto</h2>
-        <!-- TODO: change description -->
+        <h2 class="description__header">Zyskaj dostęp do harmonogramu</h2>
         <p class="description__subheader">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
-          aenean sed adipiscing diam donec. At ultrices mi tempus imperdiet. Sed
-          ullamcorper morbi tincidunt ornare massa eget egestas. Tincidunt
-          praesent semper feugiat nibh. Eu feugiat pretium nibh ipsum consequat
-          nisl. Ornare aenean euismod elementum nisi quis eleifend quam
-          adipiscing vitae. Tempus imperdiet nulla malesuada pellentesque elit
-          eget. Dictum at tempor commodo ullamcorper a lacus. Duis tristique
-          sollicitudin nibh sit amet. Id nibh tortor id aliquet. At tempor
-          commodo ullamcorper a. In nisl nisi scelerisque eu ultrices vitae
-          auctor eu.
+          Możesz dodawać do niego wcześniej wybrane przepisy, przypisując je do
+          wybranej pory posiłku oraz godziny. Poprzez odznaczenie potrawy,
+          dodasz jej wartości odżywcze do statystyk dnia. Dodatkowo zyskasz
+          możliwość wprowadzenia przekąsek, które również zostną uwzględnione w
+          statystykach.
         </p>
       </div>
     </mat-card>
@@ -62,51 +50,34 @@
       <div
         class="cards-section__card--description col-lg-5 col-md-12 col-sm-12"
       >
-        <h2 class="description__header">Załóż bezpłatne konto</h2>
-        <!-- TODO: change description -->
+        <h2 class="description__header">Dodawaj własne produkty</h2>
         <p class="description__subheader">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
-          aenean sed adipiscing diam donec. At ultrices mi tempus imperdiet. Sed
-          ullamcorper morbi tincidunt ornare massa eget egestas. Tincidunt
-          praesent semper feugiat nibh. Eu feugiat pretium nibh ipsum consequat
-          nisl. Ornare aenean euismod elementum nisi quis eleifend quam
-          adipiscing vitae. Tempus imperdiet nulla malesuada pellentesque elit
-          eget. Dictum at tempor commodo ullamcorper a lacus. Duis tristique
-          sollicitudin nibh sit amet. Id nibh tortor id aliquet. At tempor
-          commodo ullamcorper a. In nisl nisi scelerisque eu ultrices vitae
-          auctor eu.
+          W naszej bazie znajduje się wiele produktów, które możesz wybrać, a
+          następnie na ich podstawie zostną wyszukane przepisy! Wystarczy, że
+          zaczniesz wpisywać nazwę produktu, następnie wybierzesz go z listy,
+          podasz ilość i gotowe! Możesz teraz zacząc przeglądać nasze przepisy!
         </p>
       </div>
-      <!-- TODO: change image -->
       <img
         class="cards-section__card--image col-lg-6 col-md-12 col-sm-12"
-        src="/assets/accounts.png"
+        src="/assets/products.png"
       />
     </mat-card>
     <mat-card class="cards-section__card row">
-      <!-- TODO: change image -->
       <img
         class="cards-section__card--image col-lg-6 col-md-12 col-sm-12"
-        src="/assets/accounts.png"
+        src="/assets/recipes.png"
       />
       <div
         class="cards-section__card--description col-lg-5 col-md-12 col-sm-12"
       >
-        <h2 class="description__header">Załóż bezpłatne konto</h2>
-        <!-- TODO: change description -->
+        <h2 class="description__header">Wyszukuj przepisy</h2>
         <p class="description__subheader">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
-          aenean sed adipiscing diam donec. At ultrices mi tempus imperdiet. Sed
-          ullamcorper morbi tincidunt ornare massa eget egestas. Tincidunt
-          praesent semper feugiat nibh. Eu feugiat pretium nibh ipsum consequat
-          nisl. Ornare aenean euismod elementum nisi quis eleifend quam
-          adipiscing vitae. Tempus imperdiet nulla malesuada pellentesque elit
-          eget. Dictum at tempor commodo ullamcorper a lacus. Duis tristique
-          sollicitudin nibh sit amet. Id nibh tortor id aliquet. At tempor
-          commodo ullamcorper a. In nisl nisi scelerisque eu ultrices vitae
-          auctor eu.
+          Po wyborze produktów przyszedł czas na przepisy. W dokładniejszym
+          wyszukiwaniu pomogą ci rozbudowane filtry, znajdujące się nad
+          przepisami, a w łatwiejszym kompletowaniu składników pomoże
+          porównywarka produktów. Dodatkowo każdy zalogowany użytkownik ma
+          możliwość dzielenia się swoimi własnymi recepturami!
         </p>
       </div>
     </mat-card>
