--- a/frontend/src/app/components/signin/signin.component.html
+++ b/frontend/src/app/components/signin/signin.component.html
@@ -54,13 +54,12 @@
     </div>
     <div class="app-signin__card--register col-lg-12 col-md-12 col-sm-12">
       <h1>Zarządzaj swoją dietą w prosty i szybki sposób!</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur.
-      </p>
+      <h3>Zalogowani użytkownicy dostają dostęp do:</h3>
+      <p>Spersonalizowanego harmonogramu</p>
+      <p>Możliwość wprowadzania przekąsek do harmonogramu</p>
+      <p>Zapisywania posiadanych produktów</p>
+      <p>Wyszukiwania przepisów na podstawie produktów</p>
+      <p>Obliczenia BMI oraz zapotrzebowania kalorycznego</p>
       <h2>Nie masz konta? Zarejestruj się!</h2>
       <button
         routerLink="/login/register"
