refactor home component

--- a/frontend/src/app/layouts/home/home.component.html
+++ b/frontend/src/app/layouts/home/home.component.html
@@ -18,7 +18,7 @@
           - Możliwość dodawania posiadanych produktów <br />
           - Filtrowanie przepisów na podstawie produktów <br />
           - W pełni funkcjonalny harmonogram <br />
-          - Obliczanie BMI oraz zapotrzebowania na podstawie parametrów ciała
+          - Obliczanie BMI oraz zapotrzebowania kalorycznego
           <br />
           - Dodawanie własnych przepisów <br />
         </p>
